Corrected slideshow ratio on small screens

--- a/css/slide.css
+++ b/css/slide.css
@@ -22,10 +22,8 @@
 
 
     width:800px;
-    height:600px;
 
     max-width:100%;
-    max-height:100%;
 
     position:relative;
     background-color: black;
